# mada-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  COPYRIGHT  Makefile  README.md  bump_version.py  mkdocs.yaml  pyproject.toml  test_llm.py
.github/: hubcast.yml
.github/workflows/: build-and-test.yml  ci.yml  publish-dev-docs.yml  publish-docs.yml  publish-to-pypi.yml  test-job.yml
.gitlab/: e2e-tests-job.yml  integration-tests-job.yml  pages-job.yml  pre-commit-job.yml  unit-tests-job.yml
0.1.1/: 404.html  index.html
0.1.1/developer_guide/SUMMARY/: index.html
0.1.1/developer_guide/architecture/: index.html
0.1.1/developer_guide/logging_config/: index.html
0.1.1/developer_guide/main/: index.html
0.1.1/developer_guide/releases/: index.html
0.1.1/developer_guide/scheduler/: index.html
0.1.1/developer_guide/server_management/: index.html
0.1.1/developer_guide/shared/: index.html
0.1.1/developer_guide/simulation/: index.html
0.1.1/search/: search_index.json
0.1.1/user_guide/: index.html
0.1.1/user_guide/cli/: index.html
0.1.1/user_guide/configuration/: index.html
0.1.1/user_guide/installation/: index.html
0.1.1/user_guide/supported_servers/: index.html
0.1.1/user_guide/usage/: index.html
configs/: development.json  vertex_cfd_servers.json
develop/: 404.html  index.html  objects.inv
develop/developer_guide/: index.html
develop/developer_guide/SUMMARY/: index.html
develop/developer_guide/architecture/: index.html
develop/developer_guide/cli/: index.html
develop/developer_guide/docs_deployment/: index.html
develop/developer_guide/geometry/: index.html
develop/developer_guide/logging_config/: index.html
develop/developer_guide/main/: index.html
develop/developer_guide/monitor/: index.html
develop/developer_guide/releases/: index.html
develop/developer_guide/scheduler/: index.html
develop/developer_guide/server_creation/: index.html
develop/developer_guide/server_management/: index.html
develop/developer_guide/shared/: index.html
develop/developer_guide/simulation/: index.html
develop/developer_guide/surrogate/: index.html
develop/developer_guide/testing/: index.html
develop/developer_guide/workflow/: index.html
develop/search/: search_index.json
develop/user_guide/: index.html
develop/user_guide/cli/: index.html
develop/user_guide/configuration/: index.html
develop/user_guide/installation/: index.html
develop/user_guide/server_management/: index.html
develop/user_guide/supported_servers/: index.html
develop/user_guide/usage/: index.html
docs/: gen_ref_pages.py  index.md
docs/developer_guide/: architecture.md  docs_deployment.md  index.md  releases.md  testing.md
docs/developer_guide/server_creation/: adding_new_servers.md  extensions.md  index.md  plugin_servers.md  weave_study_servers.md
docs/user_guide/: cli.md  configuration.md  index.md  installation.md  server_management.md  usage.md
docs/user_guide/supported_servers/: index.md
examples/: config.json  config_JobMonitor.json  config_vertex_cfd.json  context.json  diagnose_existing_runs.py  simple_agent_loop.py
scripts/: start_all_servers.sh  stop_all_servers.sh
src/mada_tools/: __init__.py  logging_config.py  main.py
src/mada_tools/cli/: __init__.py  ascii_art.py
src/mada_tools/geometry/: __init__.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli_main.py  test_cli_main_available_servers.py  test_cli_main_restart_servers.py  test_cli_main_servers_status.py  test_cli_main_start_servers.py  test_cli_main_stop_servers.py
tests/integration/: conftest.py  test_server_management.py
(+211 files in other folders)
